<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10">

        <EditText
            android:id="@+id/edtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:hint="@string/atak"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtSurname"
            android:hint="@string/name"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtFatherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtName"
            android:hint="@string/pitanunam"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtFatherName"
            android:hint="@string/city"
            android:singleLine="true" />

        <TextView
            android:id="@+id/selectTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtCity"
            android:layout_marginTop="@dimen/size_6"
            android:text="@string/selectumar" />

        <LinearLayout
            android:id="@+id/selectAgeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectTitle"
            android:layout_marginTop="@dimen/size_10"
            android:weightSum="2">

            <Spinner
                android:id="@+id/spiStartAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spiEndAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/selectHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectAgeLayout"
            android:layout_marginTop="@dimen/size_6"
            android:text="@string/selectheight" />

        <LinearLayout
            android:id="@+id/selectHeightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectHeight"
            android:layout_marginTop="@dimen/size_10"
            android:weightSum="2">

            <Spinner
                android:id="@+id/spitStartHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spiEndHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/educationLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectHeightLayout"
            android:layout_marginTop="@dimen/size_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/education"
                android:textColor="@color/red_500"
                android:textSize="@dimen/size_20" />

            <Spinner
                android:id="@+id/spiEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/maritalstatusLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/educationLayouts"
            android:layout_marginTop="@dimen/size_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vaivahiksthiti"
                android:textColor="@color/red_500"
                android:textSize="@dimen/size_20" />

            <Spinner
                android:id="@+id/spiMaritalStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/maritalstatusLayouts"
            android:layout_marginTop="@dimen/size_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/jati"
                android:textColor="@color/red_500"
                android:textSize="@dimen/size_20" />

            <Spinner
                android:id="@+id/spiGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_below="@+id/gender"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_20"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_dialog_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Search"
                android:textSize="@dimen/size_20"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:background="@color/red_500"
                />

            <Button
                android:id="@+id/btn_dialog_cancle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Cancel"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:background="@color/red_500"
                android:textSize="@dimen/size_20" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
